# unict-reservation

./: .gitignore  Cargo.toml  README.md
src/: browser.rs  callbacks.rs  commands.rs  config.rs  keyboard.rs  main.rs
src/browser/: mod.rs  web_browser.rs
